yamls/customized_backend_ingress_yamls/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gke-ingress
  annotations:
    # If the class annotation is not specified it defaults to "gce".
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: gke-test-self
    #networking.gke.io/managed-certificates: managed-cert
    ingress.gcp.kubernetes.io/pre-shared-cert: "testgke"
    networking.gke.io/v1beta1.FrontendConfig: "ssl-frontend-config"
spec:
  rules:
  - http:
      paths:
      - path: /v1
        pathType: Exact
        backend:
          service:
            name: hello-world-1
            port:
              number: 60000
      - path: /v2
        pathType: Prefix
        backend:
          service:
            name: hello-world-2
            port:
              number: 80
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: nginx
            port:
              number: 80
